--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@material-ui/icons": "^4.11.2",
     "bootstrap": "^5.0.2",
+    "moment": "^2.29.1",
     "prettier": "^2.3.2"
   }
 }
