--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "concurrently": "^6.2.0",
     "eslint": "^7.30.0",
+    "eslint-config-airbnb": "^18.2.1",
     "nodemon": "^2.0.9",
     "prettier": "^2.3.2"
   },
@@ -19,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.13.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-router-dom": "^5.2.0"
   }
 }
